Add filter data button to mobile navbar
resolves #5

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><a id="about-btn" href="#" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="fa fa-question-circle fa-white"></i> About</a></li>
             <li><a id="chart-btn" href="#" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="fa fa-bar-chart fa-white"></i> Charts</a></li>
             <li><a id="extent-btn" href="#" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="fa fa-arrows-alt fa-white"></i> Feature Extent</a></li>
+            <li class="hidden-md hidden-lg"><a id="filter-btn" href="#" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="fa fa-filter fa-white"></i> Filter Data</a></li>
             <li class="dropdown">
               <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-laptop fa-white"></i> <span id="view">Split View </span><b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -184,7 +185,7 @@
             <div id="query-builder"></div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default pull-left" id="view-sql-btn"><i class="fa fa-database"></i> View SQL</button>
+            <button type="button" class="btn btn-default pull-left" id="view-sql-btn"><i class="fa fa-database"></i> SQL</button>
             <button type="button" class="btn btn-info" id="reset-filter-btn"><i class="fa fa-undo"></i> Reset Filter</button>
             <button type="button" class="btn btn-primary" id="apply-filter-btn"><i class="fa fa-filter"></i> Apply Filter</button>
           </div>
