basemap update with mq-open, potential solution for #10

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
     <script src="https://cdn.jsdelivr.net/leaflet.esri/1.0.0/esri-leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/leaflet.esri.geocoder/1.0.2/esri-leaflet-geocoder.js"></script>
     <script src="https://cdn.jsdelivr.net/alasql/0.1/alasql.min.js"></script>
+    <script src="https://open.mapquestapi.com/sdk/leaflet/v2.2/mq-map.js?key=i1gsmE0eDmRhm0j3JdQ1FVDtdL8uDEl5"></script>
     <script src="assets/vendor/jQuery-QueryBuilder/query-builder.standalone.min.js"></script>
     <script src="assets/vendor/tableExport/tableExport.min.js"></script>
     <script src="assets/vendor/tableExport/libs/FileSaver/FileSaver.min.js"></script>
